Adress field and delete button

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,4 +1,10 @@
 <main>
-    <input type="text" class="boldInput" value={{name}}>
-    <input type="text" value={{description}}>
+    <div class="div">
+        <input type="text" class="boldInput" value={{name}}>
+        <input type="text" value={{description}}>
+        <input type="text" value={{adress}}>
+    </div>
+    <div class="div">
+        <button type="button" (click)="onDeleteButtonPressed()">Deletar</button>
+    </div>
 </main>
