--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -1,12 +1,18 @@
 main {
     display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
+    flex-direction: row;
+    justify-content: space-between;
     padding: 3px;
     box-shadow: 3px 3px;
     border-color: black;
     border-radius: 6px;
     border-style: solid;
+}
+.div {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    padding: 3px;
 }
 
 .boldInput {
