--- a/src/app/components/list-of-contacts-page/list-of-contacts-page.component.html
+++ b/src/app/components/list-of-contacts-page/list-of-contacts-page.component.html
@@ -7,5 +7,8 @@
         @for (item of contacts; track $index) {
             <app-contact [id]="$index" [name]="item.name" [description]="item.description" [adress]="item.adress" (onDeleteButtonEvent)="deleteContact($event)"></app-contact>
         }
+        @for (item of services; track $index){
+            <app-service [id]="item.id" [description]="item.description" [manager]="item.manager" [team]="item.team"></app-service>
+        }
     </div>
 </main>
