--- a/src/app/components/upper-bar/upper-bar.component.html
+++ b/src/app/components/upper-bar/upper-bar.component.html
@@ -1,3 +1,12 @@
-<main>
-    <h1 class="Title">ORÇAMENTO</h1>
-</main>
+<nav>
+    <span>
+        <a routerLink="/" class="Title">ORÇAMENTO</a>
+    </span>
+    <div>
+        <a routerLink="/contatos">Contatos</a>
+        <a routerLink="/servicos">Serviços</a>
+    </div>
+    <span>
+        <button (click)="logout()" class="logout">Sair</button>
+    </span>
+</nav>
