Introduction of services and login autentication

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 
 <main class="main">
-  <app-upper-bar></app-upper-bar>
+  <app-upper-bar *ngIf="showNavBar"></app-upper-bar>
   <router-outlet></router-outlet>
 </main>
 
