--- a/src/app/components/upper-bar/upper-bar.component.html
+++ b/src/app/components/upper-bar/upper-bar.component.html
@@ -1,6 +1,6 @@
 <nav>
     <span>
-        <a routerLink="/" class="Title">ORÇAMENTO</a>
+        <a routerLink="/home" class="Title">{{nomeProjeto}}</a>
     </span>
     <div>
         <a routerLink="/contatos">Contatos</a>
